Created using Popcode: https://popcode.org

--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,8 @@ div{
     height:200px;
     background-color:red;
     border:dotted;
-    padding:0px;
+    padding:100px;
+    margin:75px;
 }
 card{
     width:400px;
